# display-grabber

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-27-menu-bar-tray.md
docs/superpowers/specs/: 2026-03-27-menu-bar-tray-design.md
src/display_grabber/: cli.py  displays.py
tray/: Info.plist  launchagent.plist.template  main.m
typings/Quartz/: __init__.pyi
